# qiao

./: .gitignore  pyproject.toml
qiao/: iwanna.py  utils.py
qiao/codegen/: env.py
qiao/guess/: env.py
qiao/notebook/: test.ipynb
qiao/puzzle24/: agent.py  env.py  environment_creation.py  simple_agent.py  test.ipynb  test1.ipynb
