[tool.poetry]
name = "qiao"
version = "0.1.0"
description = ""
authors = ["goldolphin <goldolphin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyautogui = "^0.9.54"
opencv-python = "^4.9.0.80"
stable-baselines3 = "^2.2.1"
sb3-contrib = "^2.2.1"
gymnasium = "^0.29.1"
tqdm = "^4.66.1"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
